# fair-python-cookiecutter

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .somesy.toml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  codemeta.json  cookiecutter.json  fair_sw_mermaid.txt  mkdocs.yml  pyproject.toml  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy_demo.yml
.gitlab/issue_templates/: bug_report.md
.reuse/: dep5
dev/: 404.html  index.html  sitemap.xml
dev/changelog/: index.html
dev/code_of_conduct/: index.html
dev/contributing/: index.html
dev/credits/: index.html
dev/dev_guide/: index.html
dev/license/: index.html
dev/quickstart/: index.html
dev/scripts/: coverage_status.py
dev/search/: search_index.json
hooks/: post_gen_project.sh  pre_gen_project.py
latest/changelog/: index.html
latest/code_of_conduct/: index.html
latest/contributing/: index.html
latest/credits/: index.html
latest/dev_guide/: index.html
latest/license/: index.html
latest/overrides/partials/: copyright.html
main/: 404.html  index.html  sitemap.xml
main/changelog/: index.html
main/code_of_conduct/: index.html
main/contributing/: index.html
main/credits/: index.html
main/dev_guide/: index.html
main/license/: index.html
main/quickstart/: index.html
main/scripts/: coverage_status.py
main/search/: search_index.json
src/fair_python_cookiecutter/: __init__.py  cli.py  config.py  main.py  utils.py
src/fair_python_cookiecutter/template/: cookiecutter.json  post_gen_project.bat  post_gen_project.sh
src/fair_python_cookiecutter/template/hooks/: post_gen_project.sh
src/fair_python_cookiecutter/template/{{ cookiecutter.project_slug }}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  somesy.toml  temp-REUSE.toml
src/fair_python_cookiecutter/template/{{ cookiecutter.project_slug }}/.reuse/: dep5
src/fair_python_cookiecutter/template/{{ cookiecutter.project_slug }}/docs/: dev_guide.md  license.md
src/fair_python_cookiecutter/template/{{ cookiecutter.project_slug }}/tests/: __init__.py  test_api.py  test_cli.py  test_lib.py
tests/: demo.yaml  proj1.yaml  test_main.py  test_template.py  test_utils.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/changelog/: index.html
v0.1.0/code_of_conduct/: index.html
v0.1.0/contributing/: index.html
v0.1.0/credits/: index.html
v0.1.0/dev_guide/: index.html
v0.1.0/license/: index.html
v0.1.0/quickstart/: index.html
v0.1.0/search/: search_index.json
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/changelog/: index.html
v0.2.0/code_of_conduct/: index.html
v0.2.0/contributing/: index.html
v0.2.0/credits/: index.html
v0.2.0/dev_guide/: index.html
v0.2.0/license/: index.html
v0.2.0/quickstart/: index.html
v0.2.0/search/: search_index.json
v0.2.0dev1/: 404.html  index.html  sitemap.xml
v0.2.0dev1/changelog/: index.html
v0.2.0dev1/code_of_conduct/: index.html
v0.2.0dev1/contributing/: index.html
v0.2.0dev1/credits/: index.html
v0.2.0dev1/dev_guide/: index.html
v0.2.0dev1/license/: index.html
v0.2.0dev1/quickstart/: index.html
v0.2.0dev2/: 404.html  index.html  sitemap.xml
v0.2.0dev2/changelog/: index.html
v0.2.0dev2/code_of_conduct/: index.html
v0.2.0dev2/contributing/: index.html
v0.2.0dev2/credits/: index.html
v0.2.0dev2/dev_guide/: index.html
v0.2.0dev2/license/: index.html
v0.2.0dev2/quickstart/: index.html
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/changelog/: index.html
v0.3.0/code_of_conduct/: index.html
v0.3.0/contributing/: index.html
v0.3.0/credits/: index.html
v0.3.0/dev_guide/: index.html
v0.3.0/license/: index.html
v0.3.0/quickstart/: index.html
v0.3.1/: 404.html  index.html  sitemap.xml
v0.3.1/changelog/: index.html
v0.3.1/code_of_conduct/: index.html
v0.3.1/contributing/: index.html
v0.3.1/credits/: index.html
v0.3.1/dev_guide/: index.html
v0.3.1/license/: index.html
v0.3.1/overrides/: main.html
v0.3.1/quickstart/: index.html
v0.3.2/: 404.html  index.html  sitemap.xml
v0.3.2/changelog/: index.html
v0.3.2/code_of_conduct/: index.html
v0.3.2/contributing/: index.html
v0.3.2/credits/: index.html
v0.3.2/dev_guide/: index.html
v0.3.2/license/: index.html
v0.3.2/quickstart/: index.html
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.0/changelog/: index.html
v1.0.0/code_of_conduct/: index.html
v1.0.0/contributing/: index.html
v1.0.0/credits/: index.html
v1.0.0/dev_guide/: index.html
v1.0.0/license/: index.html
v1.0.0/quickstart/: index.html
v1.0.0/search/: search_index.json
{{ cookiecutter.__project_slug }}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.__project_slug }}/.github/ISSUE_TEMPLATE/: feature_request.md
{{ cookiecutter.__project_slug }}/.github/workflows/: ci.yml  mirror.yml  pypi.yml  release.yml  test_pypi.yml
{{ cookiecutter.__project_slug }}/.gitlab/issue_templates/: Default.md
{{ cookiecutter.__project_slug }}/.reuse/: dep5
{{ cookiecutter.__project_slug }}/docs/: dev_guide.md  index.md  license.md  quickstart.md
{{ cookiecutter.__project_slug }}/docs/overrides/: main.html
{{ cookiecutter.__project_slug }}/docs/scripts/: coverage_status.py
{{ cookiecutter.__project_slug }}/scripts/update-codemeta/: .pre-commit-hooks.yaml  pyproject.toml
{{ cookiecutter.__project_slug }}/scripts/update-codemeta/update_codemeta/: cli.py  codemeta_context_2023-04-19.json
{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.__project_package }}/: __init__.py  cli.py  lib.py
{{ cookiecutter.__project_slug }}/tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_lib.py
{{ cookiecutter.__project_slug }}/{{ cookiecutter.__project_package }}/: api.py  cli.py
(+10 files in other folders)
