[tool.poetry]
# ---- managed by somesy, see .somesy.toml ----
name = "fair-python-cookiecutter"
version = "0.1.0"
description = "An opinionated cookiecutter template to kickstart a modern best-practice Python project with FAIR metadata."
authors = ["Anton Pirogov <a.pirogov@fz-juelich.de>"]
maintainers = ["Anton Pirogov <a.pirogov@fz-juelich.de>"]
license = "MIT"

keywords = ["fair", "metadata", "python", "cookiecutter", "template"]
repository = "https://github.com/Materials-Data-Science-and-Informatics/fair-python-cookiecutter"
homepage = "https://materials-data-science-and-informatics.github.io/fair-python-cookiecutter"
documentation = "https://materials-data-science-and-informatics.github.io/fair-python-cookiecutter"
# ---- managed by somesy, see .somesy.toml ----

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.18.1"
pre-commit = "^3.1.1"
pytest = "^7.2.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.4"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
mkdocs-macros-plugin = "^0.7.0"
markdown-include = "^0.8.1"
pymdown-extensions = "^10.2"
markdown-exec = {extras = ["ansi"], version = "^1.6.0"}
mkdocs-coverage = "^1.0.0"
mike = "^2.0.0"
anybadge = "^1.14.0"
interrogate = "^1.5.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# NOTE: You can run the following with "poetry poe TASK"
[tool.poe.tasks]
init-dev = { shell = "pre-commit install" }
lint = "pre-commit run"  # pass --all-files to check everything
test = "pytest"  # pass --cov to also collect coverage info
docs = "mkdocs build"  # run this to generate local documentation

# Tool Configurations
# -------------------

[tool.pytest.ini_options]
addopts = "--ignore='{{ cookiecutter.__project_slug }}'"

[tool.flake8]
ignore = ["W503"]
max-line-length = 88

[tool.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]
