[tool.poetry]
name = "{{ cookiecutter.__project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.__author_name_email }}"]
license = "{{ cookiecutter.project_license_spdx }}"

readme = "README.md"
repository = "{{ cookiecutter.__project_gh_repo }}"
homepage = "{{ cookiecutter.__project_gh_repo }}"
documentation = "{{ cookiecutter.__project_gh_repo }}"

keywords = {{ cookiecutter.project_keywords.split() | jsonify }}
classifiers = [
    # TODO: update the classifier strings
    # (see https://pypi.org/classifiers/)
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

packages = [{include = "{{ cookiecutter.__project_package }}"}]

[tool.poetry.dependencies]
python = "^3.8"
{%- if "cli" in cookiecutter.init_skel.lower() %}
typer = "^0.7.0"
{%- endif %}
{%- if "api" in cookiecutter.init_skel.lower() %}
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
{%- endif %}

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.18.1"
pre-commit = "^3.1.1"
update-codemeta = { path = "./scripts/update-codemeta" }
licensecheck = "^2023.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
hypothesis = "^6.68.2"
pipx = "^1.2.0"
{%- if "api" in cookiecutter.init_skel.lower() %}
httpx = "^0.23.3"
{%- endif %}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^13.0.0"

[tool.poetry.scripts]
# put your script entrypoints here
# some-script = 'module.submodule:some_object'
{%- if "cli" in cookiecutter.init_skel.lower() %}
{{ cookiecutter.__project_slug }}-cli = '{{ cookiecutter.__project_package }}.cli:app'
{%- endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# NOTE: You can run the following with "poetry poe TASK"
[tool.poe.tasks]
init-dev = { shell = "git init && git checkout -b main && pre-commit install" }
lint = "pre-commit run"  # pass --all-files to check everything
test = "pytest"  # pass --cov to also collect coverage info
docs = "pdoc -o docs {{ cookiecutter.__project_package }}"
licensecheck = "licensecheck"  # run this when you add new deps

# Tool Configurations
# -------------------

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing:skip-covered"
filterwarnings = [
# Example:
# "ignore::DeprecationWarning:importlib_metadata.*"
]

[tool.coverage.run]
source = ["{{ cookiecutter.__project_package }}"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
ignore = ["W503", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
per-file-ignores = [
# Example:
# "__init__.py:F401",
]
max-line-length = 88
count = true

[tool.licensecheck]
using = "poetry"
fail_licenses = ["gpl"]
# format = "json"
