[tool.poetry]
name = "{{ cookiecutter.__project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.__author_name_email }}"]
license = "{{ cookiecutter.project_license_spdx }}"

readme = "README.md"
repository = "{{ cookiecutter.__project_gh_repo }}"
homepage = "{{ cookiecutter.__project_gh_pages }}"
documentation = "{{ cookiecutter.__project_gh_pages }}"

keywords = {{ cookiecutter.project_keywords.split() | jsonify }}
classifiers = [
    # TODO: update the classifier strings
    # (see https://pypi.org/classifiers/)
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

packages = [{include = "{{ cookiecutter.__project_package }}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
{%- if "cli" in cookiecutter.init_skel.lower() %}
typer = "^0.7.0"
{%- endif %}
{%- if "api" in cookiecutter.init_skel.lower() %}
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
{%- endif %}

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.18.1"
pre-commit = "^3.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
hypothesis = "^6.68.2"
licensecheck = "^2023.1.1"
{%- if "api" in cookiecutter.init_skel.lower() %}
httpx = "^0.23.3"
{%- endif %}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}
mkdocs-material = "^9.1.6"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
mkdocs-macros-plugin = "^0.7.0"
markdown-include = "^0.8.1"
pymdown-extensions = "^9.11"
markdown-exec = {extras = ["ansi"], version = "^1.6.0"}
mkdocs-coverage = "^0.2.7"
mike = "^1.1.2"
anybadge = "^1.14.0"
interrogate = "^1.5.0"

[tool.poetry.scripts]
# put your script entrypoints here
# some-script = 'module.submodule:some_object'
{%- if "cli" in cookiecutter.init_skel.lower() %}
{{ cookiecutter.__project_slug }}-cli = '{{ cookiecutter.__project_package }}.cli:app'
{%- endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# NOTE: You can run the following with "poetry poe TASK"
[tool.poe.tasks]
init-dev = { shell = "pre-commit install" }
lint = "pre-commit run"  # pass --all-files to check everything
test = "pytest"  # pass --cov to also collect coverage info
docs = "mkdocs build"  # run this to generate local documentation
licensecheck = "licensecheck"  # run this when you add new deps

# Tool Configurations
# -------------------

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov-report=term-missing:skip-covered"
filterwarnings = [
# Example:
# "ignore::DeprecationWarning:importlib_metadata.*"
]

[tool.coverage.run]
source = ["{{ cookiecutter.__project_package }}"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
ignore = ["W503"]
max-line-length = 88

[tool.pydocstyle]
convention = "google"

[tool.interrogate]
fail-under = 95

[tool.bandit]
exclude_dirs = ["tests", "scripts"]

[tool.licensecheck]
using = "poetry"
