[project]
name = "update-codemeta"
version = "0.1.0"
description = "Shallow wrapper around codemetapy to use it with pre-commit."
authors = [{name = "Anton Pirogov", email = "a.pirogov@fz-juelich.de"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]

requires-python = ">=3.8"
dependencies = ["typer>=0.7.0", "rdflib>=6.3.2"]

[project.scripts]
update-codemeta = "update_codemeta.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
update_codemeta = ["*.json"]
